# PBL2_Appointment_Scheduling_System

./: .gitignore  CMakeLists.txt  LICENSE  MakeFile  README.md  caythumuc.txt  main.cpp  note.txt
data/: appointment.json  bloodType.json  doctor.json  doctorSpecializations.json  medical_Record.json  medicine_prices.json  medicine_prices.txt  medicines.json  patient.json  prescriptions.json  prescriptions.txt  room.json  room.txt  user.json
docs/: design_1.md  future_design.md  medicalRecord.md  prescription.md  ui.md
gui/: addappointmentdialog.cpp  addappointmentdialog.h  addappointmentdialog.ui  addappointmentdialog.ui.autosave  addeditdoctordialog.cpp  addeditdoctordialog.h  addeditdoctordialog.ui  addeditmedicalrecorddialog.cpp  addeditmedicalrecorddialog.h  addeditmedicalrecorddialog.ui  addeditpatientdialog.cpp  addeditpatientdialog.h  addeditpatientdialog.ui  addedituserdialog.cpp  addedituserdialog.h  addedituserdialog.ui  addmedicineprescriptiondialog.cpp  addmedicineprescriptiondialog.h  addmedicineprescriptiondialog.ui  adminwindow.cpp  adminwindow.h  adminwindow.ui  appointmentdetaildialog.cpp  appointmentdetaildialog.h  appointmentdetaildialog.ui  assistantwindow.cpp  assistantwindow.h  assistantwindow.ui  doctordetaildialog.cpp  doctordetaildialog.h  doctordetaildialog.ui  doctorwindow.cpp  doctorwindow.h  doctorwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+10 more)
include/: IDHandler.h  all.h  appointment.h  appointmentManager.h  config.h  core.h  date.h  doctor.h  doctorManager.h  doctorMananger.h  medicalRecord.h  medicalRecordManager.h  patient.h  patientManager.h  person.h  prescription.h  serializable.h  timeInterval.h  user.h  userManager.h  utils.h
src/: appointment.cpp  appointmentManager.cpp  core.cpp  doctor.cpp  doctorManager.cpp  medicalRecord.cpp  medicalRecordManager.cpp  patient.cpp  patientManager.cpp  person.cpp  prescription.cpp  user.cpp  userManager.cpp  utils.cpp
tests/: cpp.cpp  h.cpp  test  test.cpp  test0.cpp  test1.cpp  testAppointment.cpp  testDoctor.cpp  testPatient.cpp  testUser.cpp  ui.cpp
